--- a/transcriptome-analysis/transcriptome_analysis.ipynb
+++ b/transcriptome-analysis/transcriptome_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "packed-affect",
+   "id": "relevant-directory",
    "metadata": {},
    "source": [
     "# Description\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "sublime-possession",
+   "id": "composed-thing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "western-somalia",
+   "id": "extended-friday",
    "metadata": {},
    "source": [
     "# Load predicted genes"
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "perfect-saver",
+   "id": "plastic-remainder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "happy-intellectual",
+   "id": "lightweight-framing",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "driving-perspective",
+   "id": "continuing-minutes",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "nearby-bearing",
+   "id": "excess-steps",
    "metadata": {},
    "outputs": [
     {
@@ -470,21 +470,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "otherwise-jordan",
+   "id": "stone-probe",
    "metadata": {},
    "source": [
     "# Load differentially expressed genes (DEGs)\n",
     "\n",
-    "These are some significant DEGs in patients with COVID from supplementary materials at: https://academic.oup.com/cid/article/71/16/2052/5822600#supplementary-data\n",
+    "We used supplementary materials of this study that looked at differential gene expresssion in patients with COVID: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7924267/\n",
     "\n",
-    "- The reported DEGs are all **down**-regulated\n",
-    "- They come from two conditions: severe and mild"
+    "Supplement 4 is a spreadsheet with differential expression values for genes in various cell types."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "statistical-killing",
+   "id": "freelance-literature",
    "metadata": {},
    "outputs": [
     {
@@ -504,353 +503,13 @@
     }
    ],
    "source": [
-    "!pip install python-docx openpyxl # xlrd "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "sacred-scratch",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from docx.api import Document\n",
-    "\n",
-    "# adopted from https://stackoverflow.com/a/27862205/7948839\n",
-    "def parse_table(path_to_doc, table_id):\n",
-    "    document = Document(path_to_doc)\n",
-    "    \n",
-    "    if table_id > len(document.tables):\n",
-    "        raise f'There are only {len(document.tables)} tables in the document, but you asked for table {table_id}.'\n",
-    "    \n",
-    "    table = document.tables[table_id-1]\n",
-    "\n",
-    "    rows = [] # a list of dictionaries containing each row's data.\n",
-    "\n",
-    "    keys = None\n",
-    "    for i, row in enumerate(table.rows):\n",
-    "        text = (cell.text for cell in row.cells)\n",
-    "\n",
-    "        # Establish the mapping based on the first row\n",
-    "        # headers; these will become the keys of our dictionary\n",
-    "        if i == 0:\n",
-    "            keys = tuple(text)\n",
-    "            continue\n",
-    "\n",
-    "        # Construct a dictionary for this row, mapping\n",
-    "        # keys to values for this row\n",
-    "        row_data = dict(zip(keys, text))\n",
-    "        rows.append(row_data)\n",
-    "        \n",
-    "    return pd.DataFrame(rows)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "traditional-spending",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "degs_doc_path = 'ciaa462_suppl_supplymentary_materials.docx' # download from https://academic.oup.com/cid/article/71/16/2052/5822600#supplementary-data\n",
-    "\n",
-    "severe_degs = parse_table(degs_doc_path, 5)\n",
-    "severe_degs = severe_degs.rename(columns={'A1_Label': 'Gene Symbol'})\n",
-    "severe_degs.drop(columns=['Degree', 'Betweenness'], inplace=True)\n",
-    "\n",
-    "mild_degs = parse_table(degs_doc_path, 6)\n",
-    "mild_degs = mild_degs.rename(columns={'B1_Label': 'Gene Symbol'})\n",
-    "mild_degs.drop(columns=['Degree', 'Betweenness'], inplace=True)\n",
-    "\n",
-    "degs_df = pd.merge(severe_degs, mild_degs, how='outer', on='Gene Symbol')\n",
-    "conditions_mapping = {'Expression_x': 'Expression_severe', 'Expression_y': 'Expression_mild'}\n",
-    "degs_df = degs_df.rename(columns=conditions_mapping)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "solid-bench",
-   "metadata": {},
-   "source": [
-    "# Check overlap"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "forbidden-expansion",
-   "metadata": {},
-   "source": [
-    "### Stricter miRNA filtering"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "atomic-hindu",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Target Rank</th>\n",
-       "      <th>Target Score</th>\n",
-       "      <th>Sequence</th>\n",
-       "      <th>Gene Symbol</th>\n",
-       "      <th>Gene Description</th>\n",
-       "      <th>Strand</th>\n",
-       "      <th># of predicted targets</th>\n",
-       "      <th>Seed</th>\n",
-       "      <th>Expression_severe</th>\n",
-       "      <th>Expression_mild</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7</td>\n",
-       "      <td>98</td>\n",
-       "      <td>AUAGUGUUUAUAACACUUUGCU</td>\n",
-       "      <td>SOS1</td>\n",
-       "      <td>SOS Ras/Rac guanine nucleotide exchange factor 1</td>\n",
-       "      <td>5'</td>\n",
-       "      <td>656</td>\n",
-       "      <td>UAGUGUU</td>\n",
-       "      <td>-1.85018</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>96</td>\n",
-       "      <td>UCAUUACUUCAGGUGAUGGCAC</td>\n",
-       "      <td>PIAS2</td>\n",
-       "      <td>protein inhibitor of activated STAT 2</td>\n",
-       "      <td>5'</td>\n",
-       "      <td>435</td>\n",
-       "      <td>CAUUACU</td>\n",
-       "      <td>-2.38271</td>\n",
-       "      <td>-2.29114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>21</td>\n",
-       "      <td>96</td>\n",
-       "      <td>AUAGUGUUUAUAACACUUUGCU</td>\n",
-       "      <td>TNFRSF1A</td>\n",
-       "      <td>TNF receptor superfamily member 1A</td>\n",
-       "      <td>5'</td>\n",
-       "      <td>656</td>\n",
-       "      <td>UAGUGUU</td>\n",
-       "      <td>-1.19104</td>\n",
-       "      <td>-1.69855</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Target Rank  Target Score                Sequence Gene Symbol  \\\n",
-       "0            7            98  AUAGUGUUUAUAACACUUUGCU        SOS1   \n",
-       "1            2            96  UCAUUACUUCAGGUGAUGGCAC       PIAS2   \n",
-       "2           21            96  AUAGUGUUUAUAACACUUUGCU    TNFRSF1A   \n",
-       "\n",
-       "                                   Gene Description Strand  \\\n",
-       "0  SOS Ras/Rac guanine nucleotide exchange factor 1     5'   \n",
-       "1             protein inhibitor of activated STAT 2     5'   \n",
-       "2                TNF receptor superfamily member 1A     5'   \n",
-       "\n",
-       "   # of predicted targets     Seed Expression_severe Expression_mild  \n",
-       "0                     656  UAGUGUU          -1.85018             NaN  \n",
-       "1                     435  CAUUACU          -2.38271        -2.29114  \n",
-       "2                     656  UAGUGUU          -1.19104        -1.69855  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.merge(predicted_genes_df, degs_df, how='inner', on='Gene Symbol')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "partial-people",
-   "metadata": {},
-   "source": [
-    "### Laxer miRNA filtering"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "colored-appraisal",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Target Rank</th>\n",
-       "      <th>Target Score</th>\n",
-       "      <th>Sequence</th>\n",
-       "      <th>Gene Symbol</th>\n",
-       "      <th>Gene Description</th>\n",
-       "      <th>Expression_severe</th>\n",
-       "      <th>Expression_mild</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>31</td>\n",
-       "      <td>100</td>\n",
-       "      <td>AUUCAUUUGUAAUUAGAGGUGA</td>\n",
-       "      <td>PTEN</td>\n",
-       "      <td>phosphatase and tensin homolog</td>\n",
-       "      <td>-1.29593</td>\n",
-       "      <td>-1.15863</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>16</td>\n",
-       "      <td>98</td>\n",
-       "      <td>AUGAAGAAGGUAACAUGUUCAA</td>\n",
-       "      <td>AHR</td>\n",
-       "      <td>aryl hydrocarbon receptor</td>\n",
-       "      <td>-1.35261</td>\n",
-       "      <td>-2.21396</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7</td>\n",
-       "      <td>98</td>\n",
-       "      <td>AUAGUGUUUAUAACACUUUGCU</td>\n",
-       "      <td>SOS1</td>\n",
-       "      <td>SOS Ras/Rac guanine nucleotide exchange factor 1</td>\n",
-       "      <td>-1.85018</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>146</td>\n",
-       "      <td>97</td>\n",
-       "      <td>AUUCAUUUGUAAUUAGAGGUGA</td>\n",
-       "      <td>PIAS2</td>\n",
-       "      <td>protein inhibitor of activated STAT 2</td>\n",
-       "      <td>-2.38271</td>\n",
-       "      <td>-2.29114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>21</td>\n",
-       "      <td>96</td>\n",
-       "      <td>AUAGUGUUUAUAACACUUUGCU</td>\n",
-       "      <td>TNFRSF1A</td>\n",
-       "      <td>TNF receptor superfamily member 1A</td>\n",
-       "      <td>-1.19104</td>\n",
-       "      <td>-1.69855</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Target Rank  Target Score                Sequence Gene Symbol  \\\n",
-       "0           31           100  AUUCAUUUGUAAUUAGAGGUGA        PTEN   \n",
-       "1           16            98  AUGAAGAAGGUAACAUGUUCAA         AHR   \n",
-       "2            7            98  AUAGUGUUUAUAACACUUUGCU        SOS1   \n",
-       "3          146            97  AUUCAUUUGUAAUUAGAGGUGA       PIAS2   \n",
-       "4           21            96  AUAGUGUUUAUAACACUUUGCU    TNFRSF1A   \n",
-       "\n",
-       "                                   Gene Description Expression_severe  \\\n",
-       "0                    phosphatase and tensin homolog          -1.29593   \n",
-       "1                         aryl hydrocarbon receptor          -1.35261   \n",
-       "2  SOS Ras/Rac guanine nucleotide exchange factor 1          -1.85018   \n",
-       "3             protein inhibitor of activated STAT 2          -2.38271   \n",
-       "4                TNF receptor superfamily member 1A          -1.19104   \n",
-       "\n",
-       "  Expression_mild  \n",
-       "0        -1.15863  \n",
-       "1        -2.21396  \n",
-       "2             NaN  \n",
-       "3        -2.29114  \n",
-       "4        -1.69855  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.merge(predicted_genes_lax_df, degs_df, how='inner', on='Gene Symbol')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "literary-multiple",
-   "metadata": {},
-   "source": [
-    "# Confusing dataset ahead (work in progress)\n",
-    "\n",
-    "The dataset: https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE162911\n",
-    "\n",
-    "It should have 9 COVID-infected and 3 non-infected donors.\n",
-    "\n",
-    "Which donors are which? I checked all files but didn't understand it. From the sheet \"ROI_IDs_across_modalities\" within the excel file, it looks as if there's data on COVID antigen status only for different autopsy samples within Trachea and LUL (lungs, I assume?) from the same donor (D20).\n",
-    "\n",
-    "**But where is data for each individual donor in general?**\n",
-    "\n",
-    "**Note:** it's probably super obvious and I'm just missing some paragraph in some file where everything is explained.\n",
-    "\n",
-    "____\n",
-    "\n",
-    "When we figure the question above out, we can use the dataframe below to find DEGs. \n",
-    "\n",
-    "The table already normalized expression counts, so I'll just calculate the log-fold-change values and take the ones that are significant (smaller than -1)."
+    "!pip install openpyxl # xlrd "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "invalid-museum",
+   "id": "fixed-marsh",
    "metadata": {},
    "outputs": [
     {
@@ -893,47 +552,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "alpine-teddy",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'CD4+ T cell_linear': None,\n",
-       " 'AT2_linear': None,\n",
-       " 'club_linear': None,\n",
-       " 'CD8+ T cell_linear': None,\n",
-       " 'Treg_linear': None,\n",
-       " 'CD16+ monocyte_linear': None,\n",
-       " 'smc_linear': None,\n",
-       " 'monocyte_linear': None,\n",
-       " 'AT1_linear': None,\n",
-       " 'ciliated_linear': None,\n",
-       " 'plasma cell_linear': None,\n",
-       " 'goblet_linear': None,\n",
-       " 'lymphatic endothelial_linear': None,\n",
-       " 'pericyte_linear': None,\n",
-       " 'vascular endothelial_linear': None,\n",
-       " 'NK cell_linear': None,\n",
-       " 'mast_linear': None,\n",
-       " 'macrophage_linear': None,\n",
-       " 'B cell_linear': None}"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dict(zip(cell_names, [None]*(len(cell_names))))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 94,
-   "id": "graduate-nicaragua",
+   "id": "apparent-appendix",
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +586,6 @@
    "source": [
     "cell_type_ddegs = dict(zip(cell_names, [None]*(len(cell_names))))\n",
     "\n",
-    "# merged_df = pd.DataFrame(columns=['Gene'])\n",
     "merged = set()\n",
     "\n",
     "for cell_type in cell_names:\n",
@@ -989,23 +608,23 @@
     "    \n",
     "    cell_type_ddegs[cell_type] = ddeg_set\n",
     "    \n",
-    "#     merged_df = pd.merge(merged_df, df, how='right', on='Gene')\n",
-    "#     merged_df = pd.merge(merged_df, df[cols_to_use], on='Gene')\n",
-    "    \n",
-    "#     display(df)\n",
-    "#     break\n",
-    "    \n",
-    "#     cell_type_ddegs[cell_type] = df\n",
-    "    \n",
     "    print(f'Found {len(df)} downregulated genes in this cell type')\n",
     "\n",
     "print(f'Total genes: {len(merged)}')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "superb-phrase",
+   "metadata": {},
+   "source": [
+    "# Check overlap"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "tracked-brazil",
+   "id": "female-mandate",
    "metadata": {},
    "outputs": [
     {
@@ -1024,48 +643,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "integral-removal",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import defaultdict\n",
-    "d = defaultdict(list)\n",
-    "for k, v in cell_type_ddegs_overlap.items():\n",
-    "    d[tuple(v)].append(list(k))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "id": "loose-exhibition",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "column_names = list(cell_type_ddegs.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
-   "id": "wicked-poland",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cell_type_ddegs_overlap = {cell_type:genes.intersection(predicted_lax_set) for cell_type, genes in cell_type_ddegs.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "id": "experienced-healthcare",
+   "execution_count": 144,
+   "id": "hungry-campbell",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Down-regulated genes, by cell type:\n"
+      "Down-regulated genes overlapping with miRNA targets, by cell type:\n"
      ]
     },
     {
@@ -1997,12 +1583,17 @@
        "B3GNT5     Down-regulated               -  "
       ]
      },
-     "execution_count": 143,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# overlap by cell type\n",
+    "\n",
+    "column_names = list(cell_type_ddegs.keys())\n",
+    "cell_type_ddegs_overlap = {cell_type:genes.intersection(predicted_lax_set) for cell_type, genes in cell_type_ddegs.items()}\n",
+    "\n",
     "gene_to_cells = {}\n",
     "for cell_type, genes in cell_type_ddegs_overlap.items():\n",
     "    for gene in genes:\n",
@@ -2015,7 +1606,7 @@
     "results = pd.DataFrame(gene_to_cells).T\n",
     "results.columns = column_names\n",
     "\n",
-    "print('Down-regulated genes, by cell type:')\n",
+    "print('Down-regulated genes overlapping with miRNA targets, by cell type:')\n",
     "results\n",
     "    "
    ]
@@ -2023,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "molecular-biotechnology",
+   "id": "contained-sixth",
    "metadata": {},
    "outputs": [],
    "source": []
